<resources>
    <string name="app_name">Ставки на спорт</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="begin">START</string>
    <string name="quest">Quest</string>
    <string name="result">Result:</string>
    <string name="repeat">Repeat?</string>
    <string name="chess_quiz">Chess quiz</string>
</resources>